--- a/static/style.css
+++ b/static/style.css
@@ -6,7 +6,7 @@ body {
     height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     color: white;
     font-family: Arial, sans-serif;
@@ -77,4 +77,10 @@ body {
     width: 128px;
     height: 128px;
     margin: 0 auto;
+  }
+
+  @media (max-width: 576px) {
+    .logo-img {
+      max-width: 100px; /* 小分辨率设备LOGO最大宽度 */
+    }
   }
