--- a/static/style.css
+++ b/static/style.css
@@ -6,7 +6,7 @@ body {
     height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: center;
     align-items: center;
     color: white;
     font-family: Arial, sans-serif;
