--- a/static/style.css
+++ b/static/style.css
@@ -1,86 +1,114 @@
 /* 全屏背景渐变效果 */
 body {
-    background: linear-gradient(to bottom, #000000, #333333);
-    margin: 0;
-    padding: 0;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    font-family: Arial, sans-serif;
-    overflow: hidden;
-  }
-  
-  .img {
-    height:32px;
-    width:32px;
-  }
-  /* 倒计时时钟样式 */
-  #countdown-label {
-    font-size: 36px;
-  }
-  
-  #countdown {
-    font-size: 24px;
-  }
-  
-  /* 区块链动画效果 */
-  #message {
+  background: linear-gradient(to bottom, #000000, #333333);
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-family: Arial, sans-serif;
+  overflow: hidden;
+}
+
+#countdown-clock {
+  font-size: 30px;
+  display: flex;
+  justify-content: center;
+}
+
+#countdown-clock>.time {
+  background: rgba(137, 137, 137, 0.3);
+  border-radius: 10px;
+  padding: 10px;
+  margin-right: 10px;
+}
+
+#countdown-clock .time>span {
+  font-weight: 700;
+}
+
+#countdown-clock .time small {
+  padding-top: 5px;
+  font-size: 12px;
+  text-transform: uppercase;
+  display: block;
+}
+
+.img {
+  height: 32px;
+  width: 32px;
+}
+
+/* 倒计时时钟样式 */
+#countdown-label {
+  font-size: 36px;
+}
+
+#countdown {
+  font-size: 24px;
+}
+
+/* 区块链动画效果 */
+#message {
+  opacity: 0;
+  animation: fade-in 2s forwards;
+}
+
+@keyframes fade-in {
+  0% {
     opacity: 0;
-    animation: fade-in 2s forwards;
-  }
-  
-  @keyframes fade-in {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-  
-
-  /* 下雪背景效果 */
-  #snow-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
-    z-index: -1;
   }
 
-  .snowflake {
-    position: absolute;
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    opacity: 0.8;
-    pointer-events: none;
-    animation: snowfall linear infinite;
+  100% {
+    opacity: 1;
+  }
+}
+
+
+/* 下雪背景效果 */
+#snow-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  z-index: -1;
+}
+
+.snowflake {
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  opacity: 0.8;
+  pointer-events: none;
+  animation: snowfall linear infinite;
+}
+
+@keyframes snowfall {
+  0% {
+    transform: translateY(-100%);
   }
 
-  @keyframes snowfall {
-    0% {
-      transform: translateY(-100%);
-    }
-    100% {
-      transform: translateY(100vh);
-    }
+  100% {
+    transform: translateY(100vh);
   }
+}
 
-  #qrcode {
-    position: relative;
-    width: 128px;
-    height: 128px;
-    margin: 0 auto;
-  }
+#qrcode {
+  position: relative;
+  width: 128px;
+  height: 128px;
+  margin: 0 auto;
+}
 
-  @media (max-width: 576px) {
-    .logo-img {
-      max-width: 100px; /* 小分辨率设备LOGO最大宽度 */
-    }
+@media (max-width: 576px) {
+  .logo-img {
+    max-width: 100px;
+    /* 小分辨率设备LOGO最大宽度 */
   }
+}
