--- a/static/style.css
+++ b/static/style.css
@@ -106,7 +106,11 @@ body {
   margin: 0 auto;
 }
 
-@media (max-width: 576px) {
+@media (max-width: 768px) {
+  body {
+    display: block;
+    margin-top: 10%;
+  }
   .logo-img {
     max-width: 64px;
     max-height: 64px;
