--- a/static/style.css
+++ b/static/style.css
@@ -107,10 +107,10 @@ body {
 }
 
 @media (max-width: 768px) {
-  body {
+  /*body {
     display: block;
     margin-top: 10%;
-  }
+  }*/
   .logo-img {
     max-width: 64px;
     max-height: 64px;
